k8s/onboarding-api-v2/onboarding-api-v2-destinantionrule.yml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  annotations:
    helm.sh/chart: am-chart-0.1.0
    meta.helm.sh/release-name: onboarding-api-v2
    meta.helm.sh/release-namespace: mobile-apps
  name: onboarding-api-v2
  generation: 1
  namespace: mobile-apps
  labels:
    app.kubernetes.io/managed-by: Helm
spec:
  host: onboarding-api-v2.mobile-apps.svc.cluster.local
  subsets:
    - labels:
        app.kubernetes.io/instance: onboarding-api-v2
      name: default
